--- a/src/scss/core.scss
+++ b/src/scss/core.scss
@@ -88,7 +88,7 @@
 // 3. Generic
 //-------------------------
 /* stylelint-disable no-duplicate-selectors */
-@import "generic/normalize";
+@import "generic/reboot";
 
 // Resets
 @import "generic/reset/global";
