--- a/src/scss/objects/_action-bar.scss
+++ b/src/scss/objects/_action-bar.scss
@@ -24,32 +24,40 @@ $action-hover-color: $default-action-color-hover !default;
 // @scss
 .o-action-bar {
 	background-color: $action-bg-color;
-	display: flex;
-	flex-direction: row;
 	flex-wrap: nowrap;
 
 	&-avatar {
 		width: $action-size;
 		height: $action-size;
-		margin: ($action-spacing / 2) 0 ($action-spacing / 2) $action-spacing;
+		margin: ($action-spacing / 2);
 		padding: 0;
+
+		&-online {
+			border-width: 1px;
+		}
+	}
+
+	&-username {
+		line-height: 1.75;
+		padding: $action-spacing;
+		padding-left: ($action-spacing / 2);
 	}
 
 	&-title {
 		@include type(title);
 		line-height: 1;
 		float: left;
-		flex: 1;
 		margin-bottom: 0;
 		padding: $action-spacing;
+		@include child();
 	}
 
 	&-list {
 		float: left;
-		flex: 1;
 		margin: 0;
 		padding: 0;
 		list-style: none;
+		@include child();
 	}
 
 	&-list-item {
@@ -96,4 +104,15 @@ $action-hover-color: $default-action-color-hover !default;
 			}
 		}
 	}
+
+	&-profile {
+		padding: 0;
+
+		&:hover,
+		&:focus {
+			background-color: $action-bg-hover-color;
+		}
+	}
+
+	@include parent();
 }
