updare copy font-size

--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -82,7 +82,7 @@ $post-border-color: rgba(0, 0, 0, 0.125) !default;
 }
 
 .c-copy {
-	@include type(body2);
+	@include type(subhead2);
 	font-weight: 300;
 	margin: ($post-spacing * 2) 0 0;
 
