--- a/src/scss/components/_post.scss
+++ b/src/scss/components/_post.scss
@@ -32,6 +32,13 @@ $post-border-color: rgba(0, 0, 0, 0.125) !default;
 
 	&-header {
 		border-bottom: $post-border-size $post-border-style $post-border-color;
+
+		&-left {
+			flex: 6;
+			@media (min-width: $bp-lg) {
+				flex: 1;
+			}
+		}
 		@include child();
 	}
 
