--- a/src/views/forum.twig
+++ b/src/views/forum.twig
@@ -21,7 +21,7 @@
 						{% endif %}
 					{% else %}
 									<div class="c-forum t-forum">
-										<div class="c-forum-body t-block">
+										<div class="c-forum-body t-forum-body">
 											<div class="c-forum-media t-forum-media">
 												<svg class="o-icon c-forum-media-icon t-forum-media-icon{% if item.status === 1 %} c-forum-media-icon-read t-forum-media-icon-read{% endif %}"><use xlink:href="#{{ item.type }}"></use></svg>
 											</div>
@@ -36,36 +36,45 @@
 												{% endif %}
 											</div>
 										</div>
-										<div class="o-action-bar c-forum-footer t-forum-footer">
-											<ul class="o-action-bar-list">
-												<li class="o-action-bar-list-item c-forum-list-item t-forum-list-item"><svg class="o-icon c-forum-list-item-icon t-forum-list-item-icon"><use xlink:href="#topic"></use></svg> {{ item.topics }}</li>
-												<li class="o-action-bar-list-item c-forum-list-item t-forum-list-item"><svg class="o-icon c-forum-list-item-icon t-forum-list-item-icon"><use xlink:href="#replies"></use></svg> {{ item.posts }}</li>
+
+										<div class="o-bar c-forum-footer t-forum-footer">
+											<ul class="o-bar-left">
+												<li class="o-bar-item">
+													<span class="o-bar-info">
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#topic"></use></svg> {{ item.topics }}
+													</span>
+												</li>
+												<li class="o-bar-item">
+													<span class="o-bar-info">
+														<svg class="o-icon o-bar-info-icon"><use xlink:href="#replies"></use></svg> {{ item.posts }}
+													</span>
+												</li>
 											</ul>
-											<ul class="o-action-bar-actions">
+											<ul class="o-bar-right">
 												{% if item.subs %}
-													<li class="o-action-bar-action c-forum-action t-forum-action c-menu-toggle t-menu-toggle">
-														<a class="o-action-bar-action-link c-forum-action-link t-forum-action-link" href="" data-toggle="tooltip" data-placement="top" title="SubForums">
-															<svg class="o-icon o-action-bar-action-icon c-forum-action-icon t-forum-action-icon"><use xlink:href="#more-v"></use></svg>
-														</a>
-														<div class="c-menu-container t-menu-container">
-															<ul class="c-menu t-menu">
-																{% for sub in item.subs %}
-																	<li class="c-menu-item t-menu-item">
-																		<a class="c-menu-link t-menu-item" href="">
-																			<svg class="o-icon c-menu-link-icon t-menu-forum-icon"><use xlink:href="#forum-sub"></use></svg> <span class="c-menu-text t-forum-text">{{ sub.name }}</span>
-																		</a>
-																	</li>
-																{% endfor %}
-															</ul>
-														</div>
-													</li>
+												<li class="o-bar-item">
+													<a class="o-bar-action" href="" data-toggle="tooltip" data-placement="top" title="SubForums">
+														<svg class="o-icon o-bar-action-icon"><use xlink:href="#more-v"></use></svg>
+													</a>
+													<div class="c-menu-container t-menu-container">
+														<ul class="c-menu t-menu">
+															{% for sub in item.subs %}
+																<li class="c-menu-item t-menu-item">
+																	<a class="c-menu-link t-menu-item" href="">
+																		<svg class="o-icon c-menu-link-icon t-menu-forum-icon"><use xlink:href="#forum-sub"></use></svg> <span class="c-menu-text t-forum-text">{{ sub.name }}</span>
+																	</a>
+																</li>
+															{% endfor %}
+														</ul>
+													</div>
+												</li>
 												{% endif %}
 												{% if item.last_subject %}
-													<li class="o-action-bar-action c-forum-action t-forum-action">
-														<a class="o-action-bar-action-link c-forum-action-link t-forum-action-link" style="color: {{ item.last_color}}" href="" data-toggle="tooltip" data-placement="top" title="{{ item.last_subject }}, by {{ item.last_name }}, {{ item.last_time }}">
-															<svg class="o-icon o-action-bar-action-icon c-forum-action-icon t-forum-action-icon"><use xlink:href="#last-page"></use></svg>
-														</a>
-													</li>
+												<li class="o-bar-item">
+													<a class="o-bar-action" href="" style="color: {{ item.last_color}}" href="" data-toggle="tooltip" data-placement="top" title="{{ item.last_subject }}, by {{ item.last_name }}, {{ item.last_time }}">
+														<svg class="o-icon o-bar-action-icon"><use xlink:href="#last-page"></use></svg>
+													</a>
+												</li>
 												{% endif %}
 											</ul>
 										</div>
